[gd_scene load_steps=2 format=3 uid="uid://pcd7k6tdewnk"]

[ext_resource type="Script" path="res://code/hud.gd" id="1_2ktcs"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_2ktcs")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 810.0
offset_top = 21.0
offset_right = 958.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="PlayerLivesLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 56.0
offset_top = 22.0
offset_right = 168.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 32
text = "Lives: 3"
horizontal_alignment = 1

[node name="StartGameBtn" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.144
anchor_top = 0.463889
anchor_right = 0.448
anchor_bottom = 0.5375
offset_left = 216.0
offset_top = -4.0
offset_right = 216.0
offset_bottom = -4.00003
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="GameOverLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 235.0
offset_top = 23.0
offset_right = 408.0
offset_bottom = 68.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 581.0
offset_top = 22.0
offset_right = 781.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 32
text = "High Score: 0"

[connection signal="game_over" from="." to="." method="_on_game_over_signal_received"]
[connection signal="pressed" from="StartGameBtn" to="." method="_on_start_game_btn_pressed"]
